# pyspark-inspect

./: .gitignore  README.md  pyproject.toml
pyspark_inspect/: __init__.py  api.py  code_generator.py  expression.py  plan.py
pyspark_inspect/parser/: __init__.py  catalyst.py
tests/: conftest.py  create_test_data.py  sql-plan.json  sql.yaml  test_expression.py
tests/test_catalyst_parser/: test_utils.py
tests/test_catalyst_parser/test_expression/: test_unknown.py
tests/test_catalyst_parser/test_plan/: test_cte.py  test_filter.py  test_groupby.py  test_join.py  test_logical_relation.py  test_other.py  test_select.py  test_set_operations.py  test_subquery_alias.py
