[tool.poetry]
name = "pyspark-inspect"
version = "0.1.0"
description = "Inspect pyspark query plans"
authors = [
    "Matthias Ossadnik <ossadnik.matthias@gmail.com>"
]
classifiers = [
    "Development Status :: 3 - Alpha"
]
readme = "README.md"
license = "MIT"

[tool.poetry.urls]
homepage = "https://github.com/mossadnik/pyspark-inspect"


[tool.poetry.dependencies]
python = "^3.11"
pyspark = "==3.5.*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "jupyter (>=1.1.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocstrings[python] (>=1.0.4,<2.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "z3-solver (>=4.14.0,<4.15.0)"
]
